# AI-Providers

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: adding-provider.md  adding-vector-backend.md  caching.md  chat.md  embeddings.md  error-handling.md  getting-started.md  middleware.md  multimodal.md  streaming.md  tools.md  vector-stores.md
src/ai_providers/: __init__.py  base.py  client.py  exceptions.py  middleware.py  pricing.py  registry.py  retries.py  types.py
src/ai_providers/cache/: __init__.py  base.py  disk.py  memory.py
src/ai_providers/embeddings/: __init__.py  base.py  client.py  openai.py
src/ai_providers/providers/: anthropic.py  openai.py
src/ai_providers/vector_stores/: __init__.py  base.py  chroma.py  qdrant.py
tests/: conftest.py  test_anthropic_provider.py  test_async_client.py  test_cache.py  test_client.py  test_embeddings.py  test_openai_provider.py  test_registry.py  test_types_and_pricing.py  test_vector_stores.py
