[project]
name = "ai-providers"
version = "0.1.0"
description = "Unified Python interface for AI providers (OpenAI, Anthropic) with embeddings, vector stores, caching, retries and middleware."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Providers Contributors" }]
keywords = ["ai", "openai", "anthropic", "claude", "llm", "embeddings", "vector-store", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tenacity>=8.0",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.30"]
cache-disk = ["diskcache>=5"]
vector-chroma = ["chromadb>=0.5"]
vector-qdrant = ["qdrant-client>=1.9"]
all = [
    "openai>=1.30",
    "anthropic>=0.30",
    "diskcache>=5",
    "chromadb>=0.5",
    "qdrant-client>=1.9",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Sidis-group/AI-Providers"
Issues = "https://github.com/Sidis-group/AI-Providers/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_providers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "integration: tests that hit real provider APIs (require API keys)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
